<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".AccountInfo">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:id="@+id/image_view_accinfo"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:layout_centerInParent="true"
          android:background="@drawable/petfinder_mainimage">

      </ImageView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="match_parent"
          android:layout_marginStart="30dp"
          android:src="@drawable/person_icon" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:text="@string/username"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/displayusername"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:ellipsize="end"
          android:maxLines="1"
          android:textSize="20sp"
          android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="match_parent"
          android:layout_marginStart="30dp"
          android:src="@drawable/email_icon" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:text="@string/email_acc"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/displayemail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:ellipsize="end"
          android:maxLines="1"
          android:textSize="20sp"
          android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="match_parent"
          android:layout_marginStart="30dp"
          android:src="@drawable/password_icon" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:text="@string/password_acc"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/displaypassword"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:ellipsize="end"
          android:maxLines="1"
          android:textSize="20sp"
          android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical">

      <ImageView
          android:layout_width="30dp"
          android:layout_height="match_parent"
          android:layout_marginStart="30dp"
          android:src="@drawable/phone_icon" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:text="@string/phone_acc"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/displayphone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="15dp"
          android:ellipsize="end"
          android:maxLines="1"
          android:textSize="20sp"
          android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

  </LinearLayout>


</ScrollView>